# mc-enchantment-genarator

./: .gitignore  CMakeLists.txt
data/: 附魔.json
data/物品/: 剑.json  工具.json  弓.json  弩.json  盔甲.json
include/: selectwindow.h
include/core/: EnchGenMachine.h  EnchItem.h  EnchType.h  GameVersion.h  JsonReader.h  SuitableEnchDatas.h
src/: main.cpp  selectwindow.cpp
src/core/: EnchGenMachine.cpp  EnchItem.cpp  EnchType.cpp  JsonReader.cpp  SuitableEnchDatas.cpp
ui/: SelectWindow.ui
